--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nguyễn Văn A - CV</title>
+    <title>Phan Gia Hưng - CV</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <header>
             <div class="header-content">
-                <h1>Nguyễn Văn A</h1>
+                <h1>Phan Gia Hưng</h1>
                 <ul>
-                    <li><strong>Ngày sinh:</strong> 19/05/2000</li>
+                    <li><strong>Ngày sinh:</strong> 08/10/2005</li>
                     <li><strong>Giới tính:</strong> Nam</li>
-                    <li><strong>Điện thoại:</strong> (+84) 912398xxx</li>
-                    <li><strong>Email:</strong> sinhvien@funix.edu.vn</li>
-                    <li><strong>Địa chỉ:</strong> Hà Nội, Việt Nam</li>
+                    <li><strong>Điện thoại:</strong> (+84) 775566xxx</li>
+                    <li><strong>Email:</strong> phangiahung87@gmail.com</li>
+                    <li><strong>Địa chỉ:</strong> Đà Nẵng, Việt Nam</li>
                     <li><strong>Website:</strong> <a href="https://abc.tech">https://abc.tech</a></li>
                 </ul>
             </div>
             <div class="profile-picture">
-                <img src="images/default-avatar.png" alt="Nguyễn Văn A">
+                <img src="images/IMG_7645.JPG" alt="Phan Gia Hưng">
             </div>
         </header>
         <section>
@@ -42,7 +42,7 @@
             </div>
             <div class="education-item">
                 <div class="time">
-                    <p>08/2016 - 07/2019</p>
+                    <p>05/2024 - 05/2026</p>
                 </div>
                 <div class="info">
                     <p><strong>Cử nhân - ĐH FPT</strong></p>
@@ -55,7 +55,7 @@
             <h2>Kinh Nghiệm Làm Việc</h2>
             <div class="experience-item">
                 <div class="time">
-                    <p>05/2022 - Hiện tại</p>
+                    <p>05/2024 - 08/2024</p>
                 </div>
                 <div class="info">
                     <p><strong>Công ty Y</strong></p>
@@ -64,7 +64,7 @@
             </div>
             <div class="experience-item">
                 <div class="time">
-                    <p>06/2021 - 04/2022</p>
+                    <p>09/2024 - 04/2025</p>
                 </div>
                 <div class="info">
                     <p><strong>Công ty X</strong></p>
@@ -80,7 +80,7 @@
             </div>
             <div class="info">
                 <p><strong>FPT Edu Hackathon 2019</strong></p>
-                <p>Giải 3 bảng A<br>Đề tài: Trang web về phân loại rác thải.</p>
+                <p>Giải 3 bảng A<br>Đề tài: Trang web về shop giày.</p>
             </div>
         </div>
         <div class="activity-item">
@@ -192,7 +192,7 @@
     <section>
         <h2>Liên Hệ</h2>
         <ul>
-            <li><a href="https://facebook.com">Facebook</a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=100032930022893">Facebook</a></li>
             <li><a href="https://cambodianfootball.com/vi/pages/11-1xbet-cambodia/">LinkedIn</a></li>
             <li><a href="https://github.com">GitHub</a></li>
         </ul>
